src/objects/TR1__Delete_Slots_From_CR_Calendar__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Candidate_Availability__c</fullName>
        <description>Specify how Candidate Availability label has to be displayed in pick list</description>
        <inlineHelpText>Specify how Candidate Availability label has to be displayed in pick list</inlineHelpText>
        <label>Candidate Availability</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Schedule__c</fullName>
        <description>Specify how Closing Report Schedule label has to be displayed in pick list</description>
        <inlineHelpText>Specify how Closing Report Schedule label has to be displayed in pick list</inlineHelpText>
        <label>Closing Report Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_selected_options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default selected options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Candidate_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Candidate Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Closing_Report_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Closing Report Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Vacancy_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Vacancy Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Replace_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will remove any existing Closing report, Vacancy &amp; Candidate schedules &amp; create new schedules in the specified duration</description>
        <label>Replace All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Schedule__c</fullName>
        <description>Specify how Vacancy Schedule label has to be displayed in pick list</description>
        <inlineHelpText>Specify how Vacancy Schedule label has to be displayed in pick list</inlineHelpText>
        <label>Vacancy Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Delete Slots From CR Calendar</label>
    <pluralLabel>Delete Slots From CR Calendar</pluralLabel>
    <validationRules>
        <fullName>TR1__Closing_Report_Schedule_is_Mandatory</fullName>
        <active>true</active>
        <description>Ensure, Delete Closing Report Schedule checkbox is always enabled</description>
        <errorConditionFormula>IF(NOT(TR1__Delete_Closing_Report_Schedule__c) &amp;&amp; (TR1__Delete_Candidate_Availability__c || TR1__Delete_Vacancy_Schedule__c), true,false)</errorConditionFormula>
        <errorMessage>Delete Closing Report Schedule has to be enabled when Delete Vacancy schedule or Delete Candidate availability is enabled</errorMessage>
    </validationRules>
</CustomObject>